--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Include Montserrat font -->
-    <link href="/css/montserrat.css" rel="stylesheet">
+    <link href="css/montserrat.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="/css/bootstrap-theme.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/bootswatch.css">
+    <link href="css/theme.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootswatch.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
@@ -1232,23 +1232,14 @@
               <li><a href="../help/#api">API</a></li>
               <li><a href="../help/#support">Support</a></li>
             </ul>
-            <p>Made by <a href="http://thomaspark.co" rel="nofollow">Thomas Park</a>. Contact him at <a href="/cdn-cgi/l/email-protection#a5d1cdcac8c4d6e5c7cacad1d6d2c4d1c6cd8bc6cac8"><span class="__cf_email__" data-cfemail="27534f484a4654674548485354504653444f0944484a">[email&#160;protected]</span><script data-cfhash='f9e31' type="text/javascript">
-/* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("data-cfhash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}t.parentNode.removeChild(t);}}catch(u){}}()/* ]]> */</script></a>.</p>
-            <p>Code released under the <a href="https://github.com/thomaspark/bootswatch/blob/gh-pages/LICENSE">MIT License</a>.</p>
-            <p>Based on <a href="http://getbootstrap.com" rel="nofollow">Bootstrap</a>. Icons from <a href="http://fortawesome.github.io/Font-Awesome/" rel="nofollow">Font Awesome</a>. Web fonts from <a href="http://www.google.com/webfonts" rel="nofollow">Google</a>.</p>
-
           </div>
         </div>
 
       </footer>
-
-
     </div>
 
-
     <script src="//code.jquery.com/jquery.min.js"></script>
-    <script src="/js/bootstrap.js"></script>
-
-    <script src="/js/bootswatch.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/bootswatch.js"></script>
 </body>
 </html>
