--- a/public/index.html
+++ b/public/index.html
@@ -1238,7 +1238,7 @@
       </footer>
     </div>
 
-    <script src="//code.jquery.com/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/bootswatch.js"></script>
 </body>
