--- a/public/style.html
+++ b/public/style.html
@@ -8,13 +8,13 @@
 <!-- Style Guide Boilerplate Styles -->
 <link rel="stylesheet" href="css/styleguide.css">
 <!-- Fonts -->
-<link href="/css/montserrat.css" rel="stylesheet">
+<link href="css/montserrat.css" rel="stylesheet">
 <!-- Bootstrap core CSS -->
-<link href="/css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
 <!-- Bootstrap theme -->
-<link href="/css/bootstrap-theme.css" rel="stylesheet">
+<link href="css/bootstrap-theme.css" rel="stylesheet">
 <!-- Custom styles for this template -->
-<link href="/css/theme.css" rel="stylesheet">
+<link href="css/theme.css" rel="stylesheet">
 </head>
 <body   data-spy="scroll" data-target=".navbar-default" data-offset="60" >
 <!-- Fixed navbar -->
@@ -2455,9 +2455,8 @@
   <!--/.sg-pattern-styles-->
 </div>
 <!--/.sg-body-->
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="js/scrollspy.js"></script>
-<script src="js/dropdown.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.js"></script>
 <script src="js/sg-plugins.js"></script>
 <script src="js/sg-scripts.js"></script>
 </body>
